header/need some js

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,216 @@
                 <ul class="header__list">
                     <li class="header__item">
                         <a href="./services.html" class="header__link">Услуги</a>
-                        <img src="./assets/img/icons/arrow.svg" alt="arrow" class="header__more header__more_opened">
+                        <img src="./assets/img/icons/arrow.svg" alt="arrow" class="header__more">
+                        <div class="overlay">
+                            <div class="overlay__column">
+                                <p class="overlay__back">назад</p>
+                                <ul class="overlay__list">
+                                    <li class="overlay__item">
+                                        <div class="arrow-right overlay__item-icon">
+                                            <img src="./assets/img/icons/arrow.svg">
+                                        </div>
+                                        Усиление углеволокном
+                                    </li>
+                                    <ul class="overlay__submenu">
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Усиление углепластиком</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Усиление металлом</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Усиление стен</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Усиление колонн</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Усиление кирпичной кладки</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Усиление каменных конструкций</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Усиление композитными материалами</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Усиление мостов</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Усиление балок</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Усиление плит перекрытия</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Усиление проёмов и отверстий</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Усиление металлических конструкций</a>
+                                        </li>
+                                    </ul>
+                                    <li class="overlay__item">
+                                        <div class="arrow-right overlay__item-icon">
+                                            <img src="./assets/img/icons/arrow.svg">
+                                        </div>
+                                        Проект усиления
+                                    </li>
+                                    <li class="overlay__item">
+                                        <div class="arrow-right overlay__item-icon">
+                                            <img src="./assets/img/icons/arrow.svg">
+                                        </div>
+                                        Торкретирование
+                                    </li>
+                                    <li class="overlay__item">
+                                        <div class="arrow-right overlay__item-icon">
+                                            <img src="./assets/img/icons/arrow.svg">
+                                        </div>
+                                        Усиление конструкций
+                                    </li>
+                                    <li class="overlay__item">
+                                        <div class="arrow-right overlay__item-icon">
+                                        <img src="./assets/img/icons/arrow.svg">
+                                        </div>
+                                        Герметизация вводов
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="overlay__column">
+                                <ul class="overlay__list">
+                                    <li class="overlay__item">
+                                        <div class="arrow-right overlay__item-icon">
+                                            <img src="./assets/img/icons/arrow.svg">
+                                        </div>
+                                        Гидроизоляция паркингов
+                                    </li>
+                                    <li class="overlay__item">
+                                        <div class="arrow-right overlay__item-icon">
+                                            <img src="./assets/img/icons/arrow.svg">
+                                        </div>
+                                        Проект реконструкции здания
+                                    </li>
+                                    <ul class="overlay__submenu">
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Реконструкция стен</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Реконструкция колонн</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Реконструкция перекрытий</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Реконструкция жилых зданий</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Реконструкция общественных зданий</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Реконструкция железобетонных конструкций</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Реконструкция несущих конструкций</a>
+                                        </li>
+                                    </ul>
+                                    <li class="overlay__item">
+                                        <div class="arrow-right overlay__item-icon">
+                                            <img src="./assets/img/icons/arrow.svg">
+                                        </div>
+                                        Инъекционная гидроизоляция
+                                    </li>
+                                    <ul class="overlay__submenu">
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Инъекционная гидроизоляция фундамента</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Инъектирование грунтов</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Инъектирование стен</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Инъектирование бетона</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Инъектирование трещин</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Инъектирование кирпичной кладки</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Инъектирование деформационных швов</a>
+                                        </li>
+                                    </ul>
+                                    <li class="overlay__item">
+                                        <div class="arrow-right overlay__item-icon">
+                                            <img src="./assets/img/icons/arrow.svg">
+                                        </div>
+                                        Укрепление грунтов
+                                    </li>
+                                    <ul class="overlay__submenu">
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Цементация грунтов</a>
+                                        </li>
+                                    </ul>
+                                </ul>
+                            </div>
+                            <div class="overlay__column">
+                                <ul class="overlay__list">
+                                    <li class="overlay__item">
+                                        <div class="arrow-right overlay__item-icon">
+                                            <img src="./assets/img/icons/arrow.svg">
+                                        </div>
+                                        Усиление фундамента
+                                    </li>
+                                    <li class="overlay__item">
+                                        <div class="arrow-right overlay__item-icon">
+                                            <img src="./assets/img/icons/arrow.svg">
+                                        </div>
+                                        Бластинг
+                                    </li>
+                                    <li class="overlay__item">
+                                        <div class="arrow-right overlay__item-icon">
+                                            <img src="./assets/img/icons/arrow.svg">
+                                        </div>
+                                        Ремонт бетонных конструкций
+                                    </li>
+                                    <li class="overlay__item">
+                                        <div class="arrow-right overlay__item-icon">
+                                            <img src="./assets/img/icons/arrow.svg">
+                                        </div>
+                                        Обследование зданий и сооружений
+                                    </li>
+                                    <ul class="overlay__submenu">
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Цены на обследование зданий и сооружений</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Обследование железобетонных конструкций</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Обследование жилых зданий</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Обследование общественных зданий</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Обследование несущих конструкций</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Обследование промышленных зданий и сооружений</a>
+                                        </li>
+                                        <li class="overlay__submenu-item">
+                                            <a href="#" class="overlay__submenu-link">Обследование строительных конструкций</a>
+                                        </li>
+                                    </ul>
+                                    <a href="#form" class="help-button overlay__button">
+                                        Помочь с выбором
+                                        <span class="help-button__icon overlay__icon"></span>
+                                    </a>
+                                </ul>
+                            </div>
+                        </div>
                     </li>
                     <li class="header__item">
                         <a href="./projects.html" class="header__link">Проекты</a>
@@ -39,14 +248,14 @@
                         <a class="header__mail-link" href="mailto:info@ktb-astroi.ru">info@ktb-astroi.ru</a>
                     </div>
                 </div>
-                <a href="#form" class="header__button">
+                <a href="#form" class="help-button header__button">
                     Помочь с выбором
-                    <span class="header__icon"></span>
+                    <span class="help-button__icon header__icon"></span>
                 </a>
             </div>
-            <div class="header__callback">
+            <a class="header__callback">
                 <img src="./assets/img/icons/phone.svg" alt="phone">
-            </div>
+            </a>
         </div>
     </header>
     <section class="main">
