--- a/src/projects.html
+++ b/src/projects.html
@@ -28,7 +28,7 @@
                     <div class="project-item project-item_no-bg">
                         <div class="project-item__left">
                             <div class="project-item__wrapper">
-                                <div class="project-item__icon">
+                                <div class="arrow-right project-item__icon">
                                     <img src="./assets/img/icons/arrow.svg">
                                 </div>
                                 <a href="./projects-detail.html" class="project-item__title">ТРЦ Атриум</a>
@@ -49,7 +49,7 @@
                     <div class="project-item project-item_no-bg">
                         <div class="project-item__left">
                             <div class="project-item__wrapper">
-                                <div class="project-item__icon">
+                                <div class="arrow-right project-item__icon">
                                     <img src="./assets/img/icons/arrow.svg">
                                 </div>
                                 <a href="./projects-detail.html" class="project-item__title">ТРЦ Атриум</a>
@@ -70,7 +70,7 @@
                     <div class="project-item project-item_no-bg">
                         <div class="project-item__left">
                             <div class="project-item__wrapper">
-                                <div class="project-item__icon">
+                                <div class="arrow-right project-item__icon">
                                     <img src="./assets/img/icons/arrow.svg">
                                 </div>
                                 <a href="./projects-detail.html" class="project-item__title">ТРЦ Атриум</a>
