--- a/src/index.html
+++ b/src/index.html
@@ -253,7 +253,7 @@
                     <span class="help-button__icon header__icon"></span>
                 </a>
             </div>
-            <a class="header__callback">
+            <a class="header__callback" href="#form">
                 <img src="./assets/img/icons/phone.svg" alt="phone">
             </a>
         </div>
@@ -261,7 +261,7 @@
     <section class="main">
         <h2 class="main__uptitle">Усиление и ремонт композитными материалами</h2>
         <img src="./assets/img/main.png" alt="poster" class="main__poster">
-        <a href="#" class="caption caption_l main__caption">
+        <a href="#form" class="caption caption_l main__caption">
             <p class="caption__text">Вызвать <br> инженера</p>
         </a>
     </section>
@@ -408,7 +408,7 @@
             длительной эксплуатации, а также в случае смены функций, которые выполняет сооружение.
             Реконструкция здания обязательно подразумевается при внутренней перепланировке.</p>
     </section>
-    <section class="feedback">
+    <section class="feedback" id="form">
         <h3 class="feedback__title">Отправить проект <br>
             на <span>расчет стоимости бесплатно</span></h3>
         <p class="feedback__subtitle">Оставьте заявку и мы свяжемся с Вами в ближайшее время</p>
@@ -440,7 +440,7 @@
                         <a href="./projects.html" class="footer__link">Проекты</a>
                     </li>
                     <li class="footer__item">
-                        <a href="./feedback.html" class="footer__link">Отзывы</a>
+                        <a href="./reviews.html" class="footer__link">Отзывы</a>
                     </li>
                     <li class="footer__item">
                         <a href="./contacts.html" class="footer__link">Контакты</a>
@@ -456,7 +456,7 @@
                 </div>
             </div>
             <div class="footer__bottom">
-                <p class="footer__copyright">© ИнноваТех, 2021. Все права защищены.</p>
+                <p class="footer__copyright">&copy; ИнноваТех, 2021-2023. Все права защищены.</p>
                 <p class="footer__developer">Разработано  <a class="footer__author" href="https://github.com/pain1k" target="_blank">Nikita Sizov</a></p>
             </div>
         </div>
