--- a/src/services-detail.html
+++ b/src/services-detail.html
@@ -7,6 +7,257 @@
 </head>
 <body>
 <div class="container">
+  <header class="header">
+    <div class="header__wrapper">
+      <button class="burger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <a href="./" class="logo header__logo">
+        <img class="logo__img" src="./assets/img/logo.svg" alt="logo">
+        <span class="logo__text">Ремонт и усилениие строительных конструкций</span>
+      </a>
+      <div class="header__center">
+        <ul class="header__list">
+          <li class="header__item">
+            <a href="./services.html" class="header__link">Услуги</a>
+            <img src="./assets/img/icons/arrow.svg" alt="arrow" class="header__more">
+            <div class="overlay">
+              <div class="overlay__column">
+                <p class="overlay__back">назад</p>
+                <ul class="overlay__list">
+                  <li class="overlay__item">
+                    <div class="arrow-right overlay__item-icon">
+                      <img src="./assets/img/icons/arrow.svg">
+                    </div>
+                    Усиление углеволокном
+                  </li>
+                  <ul class="overlay__submenu">
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Усиление углепластиком</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Усиление металлом</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Усиление стен</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Усиление колонн</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Усиление кирпичной кладки</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Усиление каменных конструкций</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Усиление композитными материалами</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Усиление мостов</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Усиление балок</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Усиление плит перекрытия</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Усиление проёмов и отверстий</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Усиление металлических конструкций</a>
+                    </li>
+                  </ul>
+                  <li class="overlay__item">
+                    <div class="arrow-right overlay__item-icon">
+                      <img src="./assets/img/icons/arrow.svg">
+                    </div>
+                    Проект усиления
+                  </li>
+                  <li class="overlay__item">
+                    <div class="arrow-right overlay__item-icon">
+                      <img src="./assets/img/icons/arrow.svg">
+                    </div>
+                    Торкретирование
+                  </li>
+                  <li class="overlay__item">
+                    <div class="arrow-right overlay__item-icon">
+                      <img src="./assets/img/icons/arrow.svg">
+                    </div>
+                    Усиление конструкций
+                  </li>
+                  <li class="overlay__item">
+                    <div class="arrow-right overlay__item-icon">
+                      <img src="./assets/img/icons/arrow.svg">
+                    </div>
+                    Герметизация вводов
+                  </li>
+                </ul>
+              </div>
+              <div class="overlay__column">
+                <ul class="overlay__list">
+                  <li class="overlay__item">
+                    <div class="arrow-right overlay__item-icon">
+                      <img src="./assets/img/icons/arrow.svg">
+                    </div>
+                    Гидроизоляция паркингов
+                  </li>
+                  <li class="overlay__item">
+                    <div class="arrow-right overlay__item-icon">
+                      <img src="./assets/img/icons/arrow.svg">
+                    </div>
+                    Проект реконструкции здания
+                  </li>
+                  <ul class="overlay__submenu">
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Реконструкция стен</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Реконструкция колонн</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Реконструкция перекрытий</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Реконструкция жилых зданий</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Реконструкция общественных зданий</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Реконструкция железобетонных конструкций</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Реконструкция несущих конструкций</a>
+                    </li>
+                  </ul>
+                  <li class="overlay__item">
+                    <div class="arrow-right overlay__item-icon">
+                      <img src="./assets/img/icons/arrow.svg">
+                    </div>
+                    Инъекционная гидроизоляция
+                  </li>
+                  <ul class="overlay__submenu">
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Инъекционная гидроизоляция фундамента</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Инъектирование грунтов</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Инъектирование стен</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Инъектирование бетона</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Инъектирование трещин</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Инъектирование кирпичной кладки</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Инъектирование деформационных швов</a>
+                    </li>
+                  </ul>
+                  <li class="overlay__item">
+                    <div class="arrow-right overlay__item-icon">
+                      <img src="./assets/img/icons/arrow.svg">
+                    </div>
+                    Укрепление грунтов
+                  </li>
+                  <ul class="overlay__submenu">
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Цементация грунтов</a>
+                    </li>
+                  </ul>
+                </ul>
+              </div>
+              <div class="overlay__column">
+                <ul class="overlay__list">
+                  <li class="overlay__item">
+                    <div class="arrow-right overlay__item-icon">
+                      <img src="./assets/img/icons/arrow.svg">
+                    </div>
+                    Усиление фундамента
+                  </li>
+                  <li class="overlay__item">
+                    <div class="arrow-right overlay__item-icon">
+                      <img src="./assets/img/icons/arrow.svg">
+                    </div>
+                    Бластинг
+                  </li>
+                  <li class="overlay__item">
+                    <div class="arrow-right overlay__item-icon">
+                      <img src="./assets/img/icons/arrow.svg">
+                    </div>
+                    Ремонт бетонных конструкций
+                  </li>
+                  <li class="overlay__item">
+                    <div class="arrow-right overlay__item-icon">
+                      <img src="./assets/img/icons/arrow.svg">
+                    </div>
+                    Обследование зданий и сооружений
+                  </li>
+                  <ul class="overlay__submenu">
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Цены на обследование зданий и сооружений</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Обследование железобетонных конструкций</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Обследование жилых зданий</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Обследование общественных зданий</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Обследование несущих конструкций</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Обследование промышленных зданий и сооружений</a>
+                    </li>
+                    <li class="overlay__submenu-item">
+                      <a href="#" class="overlay__submenu-link">Обследование строительных конструкций</a>
+                    </li>
+                  </ul>
+                  <a href="#form" class="help-button overlay__button">
+                    Помочь с выбором
+                    <span class="help-button__icon overlay__icon"></span>
+                  </a>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li class="header__item">
+            <a href="./projects.html" class="header__link">Проекты</a>
+          </li>
+          <li class="header__item">
+            <a href="./contacts.html" class="header__link">Контакты</a>
+          </li>
+        </ul>
+        <div class="header__contacts">
+          <div class="header__phone">
+            <a class="header__phone-link" href="tel:+74950326738">+7 (495) 032-67-38</a>
+          </div>
+          <div class="header__mail">
+            <a class="header__mail-link" href="mailto:info@ktb-astroi.ru">info@ktb-astroi.ru</a>
+          </div>
+        </div>
+        <a href="#form" class="help-button header__button">
+          Помочь с выбором
+          <span class="help-button__icon header__icon"></span>
+        </a>
+      </div>
+      <a class="header__callback" href="#form">
+        <img src="./assets/img/icons/phone.svg" alt="phone">
+      </a>
+    </div>
+  </header>
     <section class="lead-block">
       <ul class="breadcrumbs lead-block__breadcrumbs">
         <li class="breadcrumbs__item">
@@ -45,7 +296,7 @@
         <div class="lead-block__image lead-block__image_small">
           <img src="./assets/img/projects/sm-img.png" alt="small-img">
         </div>
-        <a href="#" class="caption lead-block__caption">
+        <a href="#form" class="caption lead-block__caption">
           <p class="caption__text">Вызвать <br> инженера</p>
         </a>
       </div>
@@ -126,42 +377,42 @@
         <p class="prices__name">Проёмы и отверстия</p>
         <div class="prices__order">
           <p class="prices__cost">от 2 600 руб/м2</p>
-          <a href="#" class="btn btn_s prices__btn">Заказать</a>
+          <a href="#form" class="btn btn_s prices__btn">Заказать</a>
         </div>
       </div>
       <div class="prices__table-item">
         <p class="prices__name">Усиление перекрытий и покрытий</p>
         <div class="prices__order">
           <p class="prices__cost">от 6 550 руб/м2</p>
-          <a href="#" class="btn btn_s prices__btn">Заказать</a>
+          <a href="#form" class="btn btn_s prices__btn">Заказать</a>
         </div>
       </div>
       <div class="prices__table-item">
         <p class="prices__name">Стены и пилоны</p>
         <div class="prices__order">
           <p class="prices__cost">от 2 550 руб/м2</p>
-          <a href="#" class="btn btn_s prices__btn">Заказать</a>
+          <a href="#form" class="btn btn_s prices__btn">Заказать</a>
         </div>
       </div>
       <div class="prices__table-item">
         <p class="prices__name">Ригели/балки</p>
         <div class="prices__order">
           <p class="prices__cost">от 75 000 руб. за тонну</p>
-          <a href="#" class="btn btn_s prices__btn">Заказать</a>
+          <a href="#form" class="btn btn_s prices__btn">Заказать</a>
         </div>
       </div>
       <div class="prices__table-item">
         <p class="prices__name">Железобетонные фермы</p>
         <div class="prices__order">
           <p class="prices__cost">от 2 700 руб за п.м.</p>
-          <a href="#" class="btn btn_s prices__btn">Заказать</a>
+          <a href="#form" class="btn btn_s prices__btn">Заказать</a>
         </div>
       </div>
       <div class="prices__table-item">
         <p class="prices__name">Колонны</p>
         <div class="prices__order">
           <p class="prices__cost">от 2 650 руб/м2</p>
-          <a href="#" class="btn btn_s prices__btn">Заказать</a>
+          <a href="#form" class="btn btn_s prices__btn">Заказать</a>
         </div>
       </div>
     </div>
@@ -235,7 +486,7 @@
       <a href="./projects.html" class="btn projects__btn">Все объекты</a>
     </div>
   </section>
-  <section class="feedback">
+  <section class="feedback" id="form">
     <h3 class="feedback__title">Отправить проект <br>
       на <span>расчет стоимости бесплатно</span></h3>
     <p class="feedback__subtitle">Оставьте заявку и мы свяжемся с Вами в ближайшее время</p>
@@ -252,6 +503,42 @@
       </div>
     </form>
   </section>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__top">
+        <ul class="footer__list">
+          <li class="footer__item">
+            <a href="./about.html" class="footer__link">О компании</a>
+          </li>
+          <li class="footer__item">
+            <a href="./services.html" class="footer__link">Услуги</a>
+          </li>
+          <li class="footer__item">
+            <a href="./projects.html" class="footer__link">Проекты</a>
+          </li>
+          <li class="footer__item">
+            <a href="./reviews.html" class="footer__link">Отзывы</a>
+          </li>
+          <li class="footer__item">
+            <a href="./contacts.html" class="footer__link">Контакты</a>
+          </li>
+        </ul>
+        <div class="footer__contacts">
+          <div class="footer__phone">
+            <a href="tel:+74950326738" class="footer__link">+7 (495) 032-67-38</a>
+          </div>
+          <div class="footer__mail">
+            <a href="mailto:info@ktb-astroi.ru" class="footer__link">info@ktb-astroi.ru</a>
+          </div>
+        </div>
+      </div>
+      <div class="footer__bottom">
+        <p class="footer__copyright">&copy; ИнноваТех, 2021-2023. Все права защищены.</p>
+        <p class="footer__developer">Разработано  <a class="footer__author" href="https://github.com/pain1k" target="_blank">Nikita Sizov</a></p>
+      </div>
+    </div>
+  </footer>
 </div>
 </body>
 </html>
